# DeepOsuTurkish

./: analysis.py  dataset.py  db_migration.py  extractor.py  inference.py  link_formatter.py  picturize.py  pyproject.toml  tokenizer.py  train.py  utils.py
