[project]
name = "deeposuturkish"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "beautifulsoup4>=4.14.3",
    "bitsandbytes>=0.49.1",
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "nltk>=3.9.2",
    "peft>=0.18.1",
    "psutil>=7.2.1",
    "pydantic>=2.12.5",
    "regex>=2026.1.15",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
    "trl==0.19.1",
    "unsloth>=2025.7.2",
]
